// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser can parse max.EQF 1`] = `
Object {
  "presets": Array [
    Object {
      "hz1000": 64,
      "hz12000": 64,
      "hz14000": 64,
      "hz16000": 64,
      "hz170": 64,
      "hz3000": 64,
      "hz310": 64,
      "hz60": 64,
      "hz600": 64,
      "hz6000": 64,
      "name": "Entry1",
      "preamp": 33,
    },
  ],
  "type": "Winamp EQ library file v1.1",
}
`;

exports[`parser can parse midline.EQF 1`] = `
Object {
  "presets": Array [
    Object {
      "hz1000": 33,
      "hz12000": 33,
      "hz14000": 33,
      "hz16000": 33,
      "hz170": 33,
      "hz3000": 33,
      "hz310": 33,
      "hz60": 33,
      "hz600": 33,
      "hz6000": 33,
      "name": "Entry1",
      "preamp": 33,
    },
  ],
  "type": "Winamp EQ library file v1.1",
}
`;

exports[`parser can parse min.EQF 1`] = `
Object {
  "presets": Array [
    Object {
      "hz1000": 1,
      "hz12000": 1,
      "hz14000": 1,
      "hz16000": 1,
      "hz170": 1,
      "hz3000": 1,
      "hz310": 1,
      "hz60": 1,
      "hz600": 1,
      "hz6000": 1,
      "name": "Entry1",
      "preamp": 33,
    },
  ],
  "type": "Winamp EQ library file v1.1",
}
`;

exports[`parser can parse preampMax.EQF 1`] = `
Object {
  "presets": Array [
    Object {
      "hz1000": 33,
      "hz12000": 33,
      "hz14000": 33,
      "hz16000": 33,
      "hz170": 33,
      "hz3000": 33,
      "hz310": 33,
      "hz60": 33,
      "hz600": 33,
      "hz6000": 33,
      "name": "Entry1",
      "preamp": 64,
    },
  ],
  "type": "Winamp EQ library file v1.1",
}
`;

exports[`parser can parse preampMin.EQF 1`] = `
Object {
  "presets": Array [
    Object {
      "hz1000": 33,
      "hz12000": 33,
      "hz14000": 33,
      "hz16000": 33,
      "hz170": 33,
      "hz3000": 33,
      "hz310": 33,
      "hz60": 33,
      "hz600": 33,
      "hz6000": 33,
      "name": "Entry1",
      "preamp": 1,
    },
  ],
  "type": "Winamp EQ library file v1.1",
}
`;

exports[`parser can parse random.EQF 1`] = `
Object {
  "presets": Array [
    Object {
      "hz1000": 33,
      "hz12000": 15,
      "hz14000": 47,
      "hz16000": 33,
      "hz170": 35,
      "hz3000": 48,
      "hz310": 1,
      "hz60": 64,
      "hz600": 33,
      "hz6000": 33,
      "name": "Entry1",
      "preamp": 55,
    },
  ],
  "type": "Winamp EQ library file v1.1",
}
`;

exports[`parser can parse winamp.q1 1`] = `
Object {
  "presets": Array [
    Object {
      "hz1000": 33,
      "hz12000": 20,
      "hz14000": 20,
      "hz16000": 16,
      "hz170": 33,
      "hz3000": 33,
      "hz310": 33,
      "hz60": 33,
      "hz600": 33,
      "hz6000": 20,
      "name": "Classical",
      "preamp": 33,
    },
    Object {
      "hz1000": 42,
      "hz12000": 33,
      "hz14000": 33,
      "hz16000": 33,
      "hz170": 33,
      "hz3000": 42,
      "hz310": 38,
      "hz60": 33,
      "hz600": 42,
      "hz6000": 38,
      "name": "Club",
      "preamp": 33,
    },
    Object {
      "hz1000": 32,
      "hz12000": 20,
      "hz14000": 32,
      "hz16000": 32,
      "hz170": 44,
      "hz3000": 22,
      "hz310": 36,
      "hz60": 48,
      "hz600": 32,
      "hz6000": 20,
      "name": "Dance",
      "preamp": 33,
    },
    Object {
      "hz1000": 28,
      "hz12000": 48,
      "hz14000": 53,
      "hz16000": 56,
      "hz170": 50,
      "hz3000": 35,
      "hz310": 41,
      "hz60": 40,
      "hz600": 26,
      "hz6000": 40,
      "name": "Laptop speakers/headphones",
      "preamp": 33,
    },
    Object {
      "hz1000": 33,
      "hz12000": 24,
      "hz14000": 33,
      "hz16000": 33,
      "hz170": 49,
      "hz3000": 24,
      "hz310": 42,
      "hz60": 49,
      "hz600": 42,
      "hz6000": 24,
      "name": "Large hall",
      "preamp": 33,
    },
    Object {
      "hz1000": 33,
      "hz12000": 33,
      "hz14000": 44,
      "hz16000": 44,
      "hz170": 44,
      "hz3000": 33,
      "hz310": 33,
      "hz60": 44,
      "hz600": 33,
      "hz6000": 33,
      "name": "Party",
      "preamp": 33,
    },
    Object {
      "hz1000": 41,
      "hz12000": 28,
      "hz14000": 29,
      "hz16000": 29,
      "hz170": 40,
      "hz3000": 30,
      "hz310": 44,
      "hz60": 29,
      "hz600": 45,
      "hz6000": 28,
      "name": "Pop",
      "preamp": 33,
    },
    Object {
      "hz1000": 33,
      "hz12000": 33,
      "hz14000": 33,
      "hz16000": 33,
      "hz170": 33,
      "hz3000": 43,
      "hz310": 31,
      "hz60": 33,
      "hz600": 22,
      "hz6000": 43,
      "name": "Reggae",
      "preamp": 33,
    },
    Object {
      "hz1000": 26,
      "hz12000": 50,
      "hz14000": 50,
      "hz16000": 50,
      "hz170": 40,
      "hz3000": 39,
      "hz310": 23,
      "hz60": 45,
      "hz600": 19,
      "hz6000": 47,
      "name": "Rock",
      "preamp": 33,
    },
    Object {
      "hz1000": 30,
      "hz12000": 48,
      "hz14000": 50,
      "hz16000": 52,
      "hz170": 35,
      "hz3000": 39,
      "hz310": 30,
      "hz60": 40,
      "hz600": 28,
      "hz6000": 46,
      "name": "Soft",
      "preamp": 33,
    },
    Object {
      "hz1000": 39,
      "hz12000": 48,
      "hz14000": 50,
      "hz16000": 48,
      "hz170": 24,
      "hz3000": 42,
      "hz310": 25,
      "hz60": 28,
      "hz600": 31,
      "hz6000": 47,
      "name": "Ska",
      "preamp": 33,
    },
    Object {
      "hz1000": 35,
      "hz12000": 15,
      "hz14000": 14,
      "hz16000": 14,
      "hz170": 48,
      "hz3000": 25,
      "hz310": 48,
      "hz60": 48,
      "hz600": 42,
      "hz6000": 18,
      "name": "Full Bass",
      "preamp": 33,
    },
    Object {
      "hz1000": 25,
      "hz12000": 31,
      "hz14000": 37,
      "hz16000": 47,
      "hz170": 39,
      "hz3000": 23,
      "hz310": 36,
      "hz60": 39,
      "hz600": 31,
      "hz6000": 26,
      "name": "Soft Rock",
      "preamp": 33,
    },
    Object {
      "hz1000": 37,
      "hz12000": 58,
      "hz14000": 58,
      "hz16000": 60,
      "hz170": 16,
      "hz3000": 50,
      "hz310": 16,
      "hz60": 16,
      "hz600": 25,
      "hz6000": 58,
      "name": "Full Treble",
      "preamp": 33,
    },
    Object {
      "hz1000": 24,
      "hz12000": 50,
      "hz14000": 52,
      "hz16000": 52,
      "hz170": 42,
      "hz3000": 35,
      "hz310": 33,
      "hz60": 44,
      "hz600": 20,
      "hz6000": 46,
      "name": "Full Bass & Treble",
      "preamp": 33,
    },
    Object {
      "hz1000": 42,
      "hz12000": 37,
      "hz14000": 37,
      "hz16000": 36,
      "hz170": 33,
      "hz3000": 42,
      "hz310": 39,
      "hz60": 24,
      "hz600": 41,
      "hz6000": 39,
      "name": "Live",
      "preamp": 33,
    },
    Object {
      "hz1000": 24,
      "hz12000": 48,
      "hz14000": 48,
      "hz16000": 47,
      "hz170": 42,
      "hz3000": 33,
      "hz310": 33,
      "hz60": 45,
      "hz600": 23,
      "hz6000": 45,
      "name": "Techno",
      "preamp": 33,
    },
  ],
  "type": "Winamp EQ library file v1.1",
}
`;

exports[`parser can parse winamp_sample.q1 1`] = `
Object {
  "presets": Array [
    Object {
      "hz1000": 33,
      "hz12000": 33,
      "hz14000": 33,
      "hz16000": 33,
      "hz170": 33,
      "hz3000": 33,
      "hz310": 33,
      "hz60": 33,
      "hz600": 33,
      "hz6000": 33,
      "name": "Normal",
      "preamp": 33,
    },
    Object {
      "hz1000": 15,
      "hz12000": 42,
      "hz14000": 47,
      "hz16000": 52,
      "hz170": 47,
      "hz3000": 16,
      "hz310": 31,
      "hz60": 52,
      "hz600": 21,
      "hz6000": 28,
      "name": "Clear",
      "preamp": 33,
    },
    Object {
      "hz1000": 18,
      "hz12000": 48,
      "hz14000": 48,
      "hz16000": 42,
      "hz170": 28,
      "hz3000": 25,
      "hz310": 21,
      "hz60": 40,
      "hz600": 16,
      "hz6000": 40,
      "name": "Alex",
      "preamp": 33,
    },
    Object {
      "hz1000": 26,
      "hz12000": 56,
      "hz14000": 56,
      "hz16000": 51,
      "hz170": 46,
      "hz3000": 37,
      "hz310": 40,
      "hz60": 50,
      "hz600": 26,
      "hz6000": 47,
      "name": "Tare",
      "preamp": 33,
    },
  ],
  "type": "Winamp EQ library file v1.1",
}
`;
